@@ -4,8 +4,9 @@ sunuo (0.1.4) unstable; urgency=low
   * workaround for the RunUO faction bug: Reflection.cs assumes
     alphabetically sorted directory entries; ScriptCompiler.cs now sorts
     filenames before passing them to the compiler
+  * fixed a null cast in ScriptCompiler.CheckStamps()
 
- -- Max Kellermann <max@duempel.org>  Thu,  3 Mar 2005 20:44:54 +0100
+ --
 
 sunuo (0.1.3) unstable; urgency=low
 
